--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <h3> <span> Father's Occupation : </span> Head of Carpenters(Uttrakhand) </h3>
             <h3> <span> Siblings : </span> 1 younger brother and 2 younger sisters </h3>
             <h3> <span> Brother: </span> Pradeep Kumar (10th & 12th Dis. Topper, double time Airforce qualified) </h3>
-            <h3> <span> Sister: </span> Amtrita Kumar, Ujala Kumari </h3>
+            <h3> <span> Sister: </span> Amrita Kumari, Ujala Kumari </h3>
             <h3> <span> Father's Contact Number : </span> +919639992685 </h3>
             <h3> <span> House : </span> Pahar-pur (Aamwa) East Chamaparan 845458 </h3>
             <h3> <span> Family-type : </span> Small & All Memeber are Educated </h3>
