--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h3> <span> name : </span> Er Govinda Kumar </h3>
         <h3> <span> Occupation : </span> Software Engineer </h3>
         <h3> <span> Father's Name : </span> Shri Dadan sharma </h3>
-        <h3> <span> DOB : </span> 21/06/2000 </h3>
+        <h3> <span> DOB [Document] : </span> 21/06/2000 </h3>
         <h3> <span> qualification : </span> B.tech [ Double IIT-JEE qualified ] [ B.ed At Allahabad ]</h3>
         <h3> <span> College : </span>Indian Institutes of Information Technology Kota ( NIT JAIPUR )</h3>
         <h3> <span> language : </span> English & Hindi, Gujrati, Bhojpuri </h3>
@@ -296,10 +296,6 @@
     <div class="box">
         <img src="Boi-datas/ae8b2ba1c50a149d812c1323359981df.jpg" alt="">
     </div>
-
-    <div class="box">
-        <img src="Boi-datas/e7f376f4-1e13-4ab0-bdb3-27cb6b3928cf_1615730388359-01-01.jpeg" alt="">
-    </div>
     <div class="box">
         <img src="Boi-datas/FB_IMG_16040706755810481.jpg" alt="">
     </div>
@@ -357,9 +353,6 @@
     <!-- <div class="box">
         <img src="Boi-datas/Remini20210602183004557_1622679203872.png" alt="">
     </div> -->
-    <div class="box">
-        <img src="Boi-datas/Remini20210618210317370.jpg" alt="">
-    </div>
     <div class="box">
         <img src="Boi-datas/Remini20210712131500028.jpg" alt="">
     </div>
