--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <section class="home" id="home">
 
     <h3>Dear Reader -</h3>
-    <h1>I'M <span>Er Govinda Kumar</span></h1>
+    <h1>I'M <span>Govinda Kumar</span></h1>
     <p> I am working as a software engineer and I did my B.tech in Computer Science from IIIT Kota [ Mentor: NIT Jaipur ] India's top premier engineering institute. I have had a great experience at IIIT Kota hanging out with top minds of India and learning various tools and technologies.
 
         recently I have joined product based company(Bharti Soft tech pvt ltd), Orientswiss, ZoodMall & ZoodPay, positions for software Engineer with Full-Stack Developer. this company is running in seven country  and I have overall 1 year working experience professionally and also little-known interviewing/hiring resources and team building and mentoring them. 
@@ -70,17 +70,16 @@
 <div class="row">
 
     <div class="info">
-        <h3> <span> name : </span> Er Govinda Kumar </h3>
+        <h3> <span> name : </span> Govinda Kumar </h3>
         <h3> <span> Occupation : </span> Software Engineer </h3>
         <h3> <span> Father's Name : </span> Shri Dadan sharma </h3>
         <h3> <span> DOB [Document] : </span> 21/06/2000 </h3>
         <h3> <span> qualification : </span> B.tech [ Double IIT-JEE qualified ] [ B.ed At Allahabad ]</h3>
         <h3> <span> College : </span>Indian Institutes of Information Technology Kota ( NIT JAIPUR )</h3>
-        <h3> <span> language : </span> English & Hindi, Gujrati, Bhojpuri </h3>
-        <h3> <span> Permanent Address : </span> Pahar Pur ( East Chamaparan Bihar 845458 )</h3>
+        <h3> <span> language : </span> English & Hindi, Bhojpuri, Gujrati </h3>
+        <h3> <span> Permanent Address : </span> Pahar Pur ( East Chamaparan Bihar-845458 )</h3>
         <h3> <span> BMI : </span> 22.5 </h3>
         <h3> <span> Height : </span> 5.8 ft </h3>
-        <h3> <span> Drink : </span> Never </h3>
         <a href="https://www.linkedin.com/in/govinda-kumar-75bb2a197/"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
     </div>
     
