boi-data-update
i have changed some name

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <h1>I'M <span>Govinda Kumar</span></h1>
     <p> I am working as a software engineer and I did my B.tech in Computer Science from IIIT Kota [ Mentor: NIT Jaipur ] India's top premier engineering institute. I have had a great experience at IIIT Kota hanging out with top minds of India and learning various tools and technologies.
 
-        recently I have joined product based company(Bharti Soft tech pvt ltd), Orientswiss, ZoodMall & ZoodPay, positions for software Engineer with Full-Stack Developer. this company is running in seven country  and I have overall 1 year working experience professionally and also little-known interviewing/hiring resources and team building and mentoring them. 
+        recently I have joined product based company ( Bharti Soft tech pvt ltd ), Orientswiss, ZoodMall & ZoodPay, positions for software Engineer with Full-Stack Developer. this company is running in seven country  and I have overall 1 year working experience professionally and also little-known interviewing/hiring resources and team building and mentoring them. 
         
-        i am a highly motivated / kindly person and willing to create a positive impact in society or making healthy and stronge connections between our colleagues and in the life of people through whatever small I could do. As a part of my purpose towards creating a social impact, I live a healthy lifestyle. and I am into fitness, singing Thanks again🙏</p>
+        i am a highly motivated / kindly person and willing to create a positive impact in society or making healthy and stronge connections between our colleagues and in the life of people through whatever small I could do. As a part of my purpose towards creating a social impact, I live a healthy lifestyle. and I am into fitness, singing Thank you</p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
 
 </section>
@@ -651,9 +651,8 @@
         <h3 class="title">contact info</h3>
 
         <div class="info">
-            <h3> <i class="fas fa-envelope"></i> 2018kucp1137@iiitkota.ac.in </h3>
+            <h3> <i class="fas fa-envelope"></i>www.govindakumar143@gmail.com </h3>
             <h3> <i class="fas fa-phone"></i> +919525194959 </h3>
-            <!-- <h3> <i class="fas fa-phone"></i> +919525194959 </h3> -->
             <h3> <i class="fas fa-map-marker-alt"></i> Vadodra, india - 390010. </h3>
         </div>
 
