--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         recently I have joined product based company ( Bharti Soft tech pvt ltd ), Orientswiss, ZoodMall & ZoodPay, positions for software Engineer with Full-Stack Developer. this company is running in seven country  and I have overall 1 year working experience professionally and also little-known interviewing/hiring resources and team building and mentoring them. 
         
-        i am a highly motivated / kindly person and willing to create a positive impact in society or making healthy and stronge connections between our colleagues and in the life of people through whatever small I could do. As a part of my purpose towards creating a social impact, I live a healthy lifestyle. and I am into fitness, singing Thanks again🙏</p>
+        i am a highly motivated / kindly person and willing to create a positive impact in society or making healthy and stronge connections between our colleagues and in the life of people through whatever small I could do. As a part of my purpose towards creating a social impact, I live a healthy lifestyle. and I am into fitness, singing Thank you</p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
 
 </section>
