--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         recently I have joined product based company ( Bharti Soft tech pvt ltd ), Orientswiss, ZoodMall & ZoodPay, positions for software Engineer with Full-Stack Developer. this company is running in seven country  and I have overall 1 year working experience professionally and also little-known interviewing/hiring resources and team building and mentoring them. 
         
-        i am a highly motivated / kindly person and willing to create a positive impact in society or making healthy and stronge connections between our colleagues and in the life of people through whatever small I could do. As a part of my purpose towards creating a social impact, I live a healthy lifestyle. and I am into fitness, singing Thank you</p>
+        i am a highly motivated / kindly person and willing to create a positive impact in society or making healthy and stronge connections between our colleagues and in the life of people through whatever small I could do. As a part of my purpose towards creating a social impact, I live a healthy lifestyle. and I am into fitness, singing Thanks again🙏</p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
 
 </section>
@@ -266,21 +266,21 @@
     <!-- <div class="box">
         <img src="Boi-datas/20220220_182347_1671470219522-01.jpeg" alt="">
     </div> -->
-    <div class="box">
+    <!-- <div class="box">
         <img src="Boi-datas/39688292-421c-4bcd-938a-f20bc91814ce-01_1664386503707-01_1664387747522.png" alt="">
-    </div>
-    <div class="box">
+    </div> -->
+    <!-- <div class="box">
         <img src="Boi-datas/1657341557605_1657342216704.png" alt="">
-    </div>
-    <div class="box">
+    </div> -->
+    <!-- <div class="box">
         <img src="Boi-datas/1671471021692.jpg" alt="">
-    </div>
+    </div> -->
     <!-- <div class="box">
         <img src="Boi-datas/1671471213471.jpg" alt="">
     </div> -->
-    <div class="box">
+    <!-- <div class="box">
         <img src="Boi-datas/1671773046341_1671806025212-01.jpeg" alt="">
-    </div>
+    </div> -->
     <div class="box">
         <img src="Boi-datas/1671820244623_1671858708595.png" alt="">
     </div>
@@ -293,9 +293,9 @@
     <div class="box">
         <img src="Boi-datas/AddText_03-02-11.49.53.jpg" alt="">
     </div>
-    <div class="box">
+    <!-- <div class="box">
         <img src="Boi-datas/ae8b2ba1c50a149d812c1323359981df.jpg" alt="">
-    </div>
+    </div> -->
     <!-- <div class="box">
         <img src="Boi-datas/FB_IMG_16040706755810481.jpg" alt="">
     </div> -->
@@ -335,9 +335,9 @@
     <!-- <div class="box">
         <img src="Boi-datass/IMG_20230113_223157_150.jpg" alt="">
     </div> -->
-    <div class="box">
+    <!-- <div class="box">
         <img src="Boi-datas/IMG-20230108-WA0016-01_1673145053039.png" alt="">
-    </div>
+    </div> -->
     <!-- <div class="box">
         <img src="Boi-datas/IMG-20230108-WA0021.jpg" alt="">
     </div> -->
@@ -501,9 +501,9 @@
         <!-- <div class="box">
             <img src="Boi-datas/prize/1677607865571.jpg" alt="">
         </div> -->
-        <div class="box">
+        <!-- <div class="box">
             <img src="Boi-datas/prize/1677607944382.jpg" alt="">
-        </div>
+        </div> -->
         <div class="box">
             <img src="Boi-datas/prize/1677607968537-01.jpeg" alt="">
         </div>
@@ -532,12 +532,12 @@
         <div class="box">
             <img src="Boi-datas/prize/download.jpeg" alt="">
         </div>
-        <div class="box">
+        <!-- <div class="box">
             <img src="Boi-datas/prize/efdd2c60-4c31-4049-8379-606b5b2e5727.png" alt="">
-        </div>
-        <div class="box">
+        </div> -->
+        <!-- <div class="box">
             <img src="Boi-datas/prize/FB_IMG_15993901655046051.jpg" alt="">
-        </div>
+        </div> -->
 
         <!-- <div class="box">
             <img src="Boi-datas/prize/FB_IMG_16175206776055902-01.jpeg" alt="">
@@ -608,15 +608,15 @@
         <div class="box">
             <img src="Boi-datas/20221014_180446_1665763444523-01.jpeg" alt="">
         </div>
-        <div class="box">
+        <!-- <div class="box">
             <img src="Boi-datas/39688292-421c-4bcd-938a-f20bc91814ce-01_1664386503707-01_1664387747522.png" alt="">
-        </div>
-        <div class="box">
+        </div> -->
+        <!-- <div class="box">
             <img src="Boi-datas/9124A905-072C-4B98-99C3-DEE836DBAA81-1.jpg" alt="">
         </div>
         <div class="box">
             <img src="Boi-datas/flag.jpeg" alt="">
-        </div>
+        </div> -->
     
     </div>
     <!-- <marquee> -->
