--- a/index.html
+++ b/index.html
@@ -219,7 +219,11 @@
 <h1 class="heading"> my <span>portfolio</span> </h1>
 
 <div class="box-container">
+<div class="box">
 
+        <img src="Boi-datas/Newagovinda.jpeg" alt="">
+
+    </div>
     <div class="box">
         <img src="Boi-data/w.jpeg" alt="">
         
