--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 <div class="box-container">
 <div class="box">
 
-        <img src="Boi-datas/Newagovinda.jpeg" alt="">
+        <img src="Boi-datas/Newgovinda.jpeg" alt="">
 
     </div>
     <div class="box">
