--- a/index.html
+++ b/index.html
@@ -224,6 +224,13 @@
         <img src="Boi-datas/Newgovinda.jpeg" alt="">
 
     </div>
+        <div class="box">
+
+        <img src="Boi-datas/Gk.png" alt="">
+
+        
+
+    </div>
     <div class="box">
         <img src="Boi-data/w.jpeg" alt="">
         
