--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 <h1 class="heading"> my <span>portfolio</span> </h1>
 
 <div class="box-container">
-<div class="box">
+<!-- <div class="box">
 
         <img src="Boi-datas/Newgovinda.jpeg" alt="">
 
@@ -230,7 +230,7 @@
 
         
 
-    </div>
+    </div> -->
     <div class="box">
         <img src="Boi-data/w.jpeg" alt="">
         
