--- a/index.html
+++ b/index.html
@@ -219,6 +219,11 @@
 <h1 class="heading"> my <span>portfolio</span> </h1>
 
 <div class="box-container">
+    <div class="box">
+
+        <img src="Boi-data/1696132993307_1696133223380.png" alt="">
+
+    </div>
 <!-- <div class="box">
 
         <img src="Boi-datas/Newgovinda.jpeg" alt="">
