--- a/index.html
+++ b/index.html
@@ -219,6 +219,54 @@
 <h1 class="heading"> my <span>portfolio</span> </h1>
 
 <div class="box-container">
+<div class="box"><img src="Vadodara.jpg" alt=""></div>
+<div class="box"><img src="11.jpg" alt=""></div>    
+<div class="box"><img src="2.jpeg" alt=""></div>
+<div class="box"><img src="3.jpeg" alt=""></div>
+<div class="box"><img src="1.jpeg" alt=""></div>
+<div class="box"><img src="4.png" alt=""></div> 
+<div class="box"><img src="5.png" alt=""></div>
+<div class="box"><img src="6.jpeg" alt=""></div>
+<div class="box"><img src="7.jpeg" alt=""></div>
+<div class="box"><img src="8.jpeg" alt=""></div>
+<div class="box"><img src="12.jpeg" alt=""></div>
+<div class="box"><img src="13.png" alt=""></div>
+<div class="box"><img src="14.png" alt=""></div>
+<div class="box"><img src="15.jpg" alt=""></div>
+<div class="box"><img src="16.png" alt=""></div>
+<div class="box"><img src="17.jpeg" alt=""></div>
+<div class="box"><img src="18.jpeg" alt=""></div>
+<div class="box"><img src="19.png" alt=""></div>    
+<div class="box"><img src="20.jpeg" alt=""></div>
+<div class="box"><img src="21.jpg" alt=""></div>
+<div class="box"><img src="23.jpg" alt=""></div>
+<div class="box"><img src="25.jpg" alt=""></div>
+<div class="box"><img src="26.jpeg" alt=""></div>
+<div class="box"><img src="27.jpeg" alt=""></div>
+<div class="box"><img src="27.jpg" alt=""></div>
+<div class="box"><img src="28.jpg" alt=""></div>    
+<div class="box"><img src="29.png" alt=""></div>
+<div class="box"><img src="30.png" alt=""></div>
+<div class="box"><img src="31.jpg" alt=""></div>
+<div class="box"><img src="32.jpg" alt=""></div>
+<div class="box"><img src="33.jpg" alt=""></div>
+<div class="box"><img src="34.png" alt=""></div>
+<div class="box"><img src="36.jpg" alt=""></div>
+<div class="box"><img src="39.png" alt=""></div>
+<div class="box"><img src="40.png" alt=""></div>
+<div class="box"><img src="41.png" alt=""></div>
+<div class="box"><img src="42.jpg" alt=""></div>
+<div class="box"><img src="2.jpeg" alt=""></div>
+<div class="box"><img src="2.jpeg" alt=""></div>
+<div class="box"><img src="2.jpeg" alt=""></div>
+<div class="box"><img src="2.jpeg" alt=""></div>
+<div class="box"><img src="2.jpeg" alt=""></div>
+<div class="box"><img src="2.jpeg" alt=""></div>
+<div class="box"><img src="2.jpeg" alt=""></div>
+<div class="box"><img src="2.jpeg" alt=""></div>
+<div class="box"><img src="2.jpeg" alt=""></div>
+<div class="box"><img src="2.jpeg" alt=""></div>
+<div class="box"><img src="2.jpeg" alt=""></div>    
     <div class="box">
 
         <img src="Boi-data/1696132993307_1696133223380.png" alt="">
@@ -390,7 +438,14 @@
     <h1 class="heading"> Proud to  <span>Be</span> </h1>
     
     <div class="box-container">
-
+<div class="box"><img src="office1.jpeg" alt=""></div>
+<div class="box"><img src="office3.jpeg" alt=""></div> 
+<div class="box"><img src="office4.jpeg" alt=""></div>  
+<div class="box"><img src="24.png" alt=""></div>  
+<div class="box"><img src="office6.png" alt=""></div>   
+<div class="box"><img src="37.jpg" alt=""></div>  
+<div class="box"><img src="36.jpeg" alt=""></div>
+<div class="box"><img src="38.jpeg" alt=""></div>        
         <div class="box">
             <img src="Boi-datas/prize/1677607631603.jpg" alt="">
         </div>
