--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <h1>I'M <span> Govinda Kumar</span></h1>
     <p> I am working as a software engineer and I did my B.tech in Computer Science from IIIT Kota [ Mentor: NIT Jaipur ] India's top premier engineering institute. I have had a great experience at IIIT Kota hanging out with top minds of India and learning various tools and technologies.
 
-        recently I have joined product based company ( Bharti Soft tech pvt ltd ), Orientswiss, ZoodMall & ZoodPay, positions for software Engineer with Full-Stack Developer. this company is running in seven country  and I have overall 1 year working experience professionally and also little-known interviewing/hiring resources and team building and mentoring them. 
+        recently I have joined product based company ( Bharti Soft tech pvt ltd ), Orientswiss, ZoodMall & ZoodPay, positions for software Engineer with Full-Stack Developer. this company is running in seven country  and I have overall 2 year working experience professionally and also little-known interviewing/hiring resources and team building and mentoring them. 
         
-        i am a highly motivated / kindly person and willing to create a positive impact in society or making healthy and stronge connections between our colleagues and in the life of people through whatever small I could do. As a part of my purpose towards creating a social impact, I live a healthy lifestyle. and I am into fitness, singing Thanks again🙏</p>
+        i am a highly motivated / kindly person and willing to create a positive impact in the society or making healthy and stronge connections between our colleagues and in the life of people through whatever small I could do. As a part of my purpose towards creating a social impact, I live a healthy lifestyle. and I am into fitness, singing Thanks again🙏</p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
 
 </section>
@@ -74,9 +74,9 @@
         <h3> <span> Occupation : </span> Software Engineer </h3>
         <h3> <span> Father's Name : </span> Shri Dadan sharma </h3>
         <h3> <span> DOB [Document] : </span> 21/06/2000 </h3>
-        <h3> <span> qualification : </span> B.tech [ Double IIT-JEE qualified ] [ B.ed At Allahabad ]</h3>
+        <h3> <span> qualification : </span> B.tech [ Double IIT-JEE qualified ] [ B.ed At Allahabad ] [ Dropped NIT Nagaland ]</h3>
         <h3> <span> College : </span>Indian Institutes of Information Technology Kota ( NIT JAIPUR )</h3>
-        <h3> <span> language : </span> English & Hindi, Gujrati, Bhojpuri </h3>
+        <h3> <span> language : </span> English & Hindi, Bhojpuri, Gujrati</h3>
         <h3> <span> Permanent Address : </span> Pahar Pur ( East Chamaparan Bihar-845458 )</h3>
         <h3> <span> BMI : </span> 22.5 </h3>
         <h3> <span> Height : </span> 5.8 ft </h3>
@@ -88,7 +88,7 @@
     <div class="counter">
 
         <div class="box">
-            <span>1+</span>
+            <span>2+</span>
             <h3>years of experience</h3>
         </div>
 
