--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
 <div class="box"><img src="6.jpeg" alt=""></div>
 <div class="box"><img src="7.jpeg" alt=""></div>
 <div class="box"><img src="8.jpeg" alt=""></div>
-<div class="box"><img src="12.jpeg" alt=""></div>
+<div class="box"><img src="12.png" alt=""></div>
 <div class="box"><img src="13.png" alt=""></div>
-<div class="box"><img src="14.png" alt=""></div>
+<div class="box"><img src="14.jpg" alt=""></div>
 <div class="box"><img src="15.jpg" alt=""></div>
-<div class="box"><img src="16.png" alt=""></div>
+<div class="box"><img src="16.jpg" alt=""></div>
 <div class="box"><img src="17.jpeg" alt=""></div>
 <div class="box"><img src="18.jpeg" alt=""></div>
 <div class="box"><img src="19.png" alt=""></div>    
