--- a/index.html
+++ b/index.html
@@ -241,8 +241,7 @@
 <div class="box"><img src="21.jpg" alt=""></div>
 <div class="box"><img src="23.jpg" alt=""></div>
 <div class="box"><img src="25.jpg" alt=""></div>
-<div class="box"><img src="26.jpeg" alt=""></div>
-<div class="box"><img src="27.jpeg" alt=""></div>
+<div class="box"><img src="26.jpeg" alt=""></div>a
 <div class="box"><img src="27.jpg" alt=""></div>
 <div class="box"><img src="28.jpg" alt=""></div>    
 <div class="box"><img src="29.png" alt=""></div>
