--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 <div class="box"><img src="office1.jpeg" alt=""></div>
 <div class="box"><img src="office3.jpeg" alt=""></div> 
 <div class="box"><img src="office4.jpeg" alt=""></div>  
-<div class="box"><img src="24.png" alt=""></div>  
+<div class="box"><img src="24.jpg" alt=""></div>  
 <div class="box"><img src="office6.png" alt=""></div>   
 <div class="box"><img src="37.jpg" alt=""></div>  
 <div class="box"><img src="36.jpeg" alt=""></div>
