--- a/index.html
+++ b/index.html
@@ -221,13 +221,13 @@
 <div class="box-container">
 <div class="box"><img src="Vadodara.jpg" alt=""></div>
 <div class="box"><img src="11.jpg" alt=""></div>    
-<div class="box"><img src="2.jpeg" alt=""></div>
+<!--<div class="box"><img src="2.jpeg" alt=""></div> -->
 <div class="box"><img src="3.jpeg" alt=""></div>
-<div class="box"><img src="1.jpeg" alt=""></div>
+<!--<div class="box"><img src="1.jpeg" alt=""></div> -->
 <div class="box"><img src="4.png" alt=""></div> 
-<div class="box"><img src="5.png" alt=""></div>
+<!--<div class="box"><img src="5.png" alt=""></div>
 <div class="box"><img src="6.jpeg" alt=""></div>
-<div class="box"><img src="7.jpeg" alt=""></div>
+<div class="box"><img src="7.jpeg" alt=""></div>-->
 <div class="box"><img src="8.jpeg" alt=""></div>
 <div class="box"><img src="12.png" alt=""></div>
 <div class="box"><img src="13.png" alt=""></div>
